# catcheye-pick

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  update_env.sh
cmake/: catcheye-pick-launcher.sh.in
config/: pallet_candidates.json  pallet_roi_cam_default.json  pointcloud_roi.json  rgb_cubeeye_offset.json  robot_calibration.json  roi_cam_default.json
docker/: Dockerfile  docker-compose.base.yml  docker-compose.dev.yml  entrypoint.sh
models/yolo26n_ncnn_model/: metadata.yaml
models/yolo26s_ncnn_model/: metadata.yaml  model_ncnn.py
scripts/: cmake.sh  run-all-hailo.sh  run-all.sh  run-cubeeye-detect.sh  run-pcl.sh  run-rgb-hailo.sh  run-rgb-ncnn.sh  run-rgb-pcl.sh  run-rgb.sh  sync-compile-commands.sh
src/: main.cpp
src/pick/: app.cpp  app.hpp  config_json.cpp  config_json.hpp  cubeeye_camera.cpp  cubeeye_camera.hpp  cubeeye_frame_config.cpp  cubeye_camera.cpp  cubeye_camera.hpp  http_api_server.cpp  http_api_server.hpp  object_position_estimator.cpp  object_position_estimator.hpp  pallet_candidate_detector.cpp  pallet_candidate_detector.hpp  pallet_candidate_repository.cpp  pallet_candidate_repository.hpp  pointcloud_roi_repository.cpp  pointcloud_roi_repository.hpp  processor.cpp  processor.hpp  processor_config.hpp  rgb_cubeeye_offset_repository.cpp  rgb_cubeeye_offset_repository.hpp  rgbd_frame.hpp  robot_calibration_repository.cpp  robot_calibration_repository.hpp  viewer_metadata.cpp  viewer_metadata.hpp  viewer_payload_builder.cpp  viewer_payload_builder.hpp
